RESOLVED FIXED283080
[TZone] Fix a couple of TZone annotations
https://bugs.webkit.org/show_bug.cgi?id=283080
Summary [TZone] Fix a couple of TZone annotations
Michael Saboff
Reported 2024-11-13 13:31:56 PST
This is tracking two TZone annotations issues. 1. The annotations for WebProcessSyncClient mentions another class and doesn't include the implementation macro. Looks like a copy-paste error. 2. The class ImageDecoderAVFObjC is missing a TZone annotations as its super class has one.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-13 13:32:19 PST
Michael Saboff
Comment 2 2024-11-13 13:39:25 PST
EWS
Comment 3 2024-11-18 09:59:56 PST
Committed 286735@main (99f58d6bd884): <https://commits.webkit.org/286735@main> Reviewed commits have been landed. Closing PR #36609 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.