[TZone] Fix a couple of TZone annotations https://bugs.webkit.org/show_bug.cgi?id=283080 rdar://139826390

Reviewed by Yusuke Suzuki.

Fixed the TZone annotation in WebProcessSyncClient.h and added the corresponding IMPL annotation to WebProcessSyncClient.cpp

* Source/WebKit/WebProcess/WebCoreSupport/WebProcessSyncClient.cpp:
* Source/WebKit/WebProcess/WebCoreSupport/WebProcessSyncClient.h:

Canonical link: https://commits.webkit.org/286735@main